<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GCM Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">The Navigation Drawer is Open</string>
    <string name="drawer_close">The Navigation Drawer is Closed</string>
    <string name="home_label">Welcome to my experiment please register to proceed..</string>
    <string name="register_textView_firstName">First Name :</string>
    <string name="register_textView_lastName">Last Name :</string>
    <string name="register_textView_email">Email :</string>
    <string name="register_editText_firstName"> John/Jane</string>
    <string name="register_editText_lastName">Doe</string>
    <string name="register_editText_email">example@xyz.ext</string>
    <string name="register_button_label">Click to Register!!</string>
    <string name="send_message_hint">Please enter message</string>
    <string name="send_button_label">Send</string>

</resources>
