<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_textView_firstName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/register_editText_firstName"
            android:layout_below="@id/register_first_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/register_editText_firstName"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/register_last_name"
            android:layout_below="@id/register_editText_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_textView_lastName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/register_editText_lastName"
            android:layout_below="@id/register_last_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/register_editText_lastName"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/register_textView_email"
            android:layout_below="@id/register_editText_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_textView_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/register_editText_email"
            android:inputType="textEmailAddress"
            android:layout_below="@id/register_textView_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/register_editText_email"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/register_button_register"
            android:layout_below="@id/register_editText_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/register_button_label"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:elevation="4dp"/>

    </RelativeLayout>

</ScrollView>